--- a/README.adoc
+++ b/README.adoc
@@ -1,14 +1,36 @@
-=Samples of Web Developing work
+= Samples of Web Development work
 
-==Internal company analytics website
+[.lead]
+Samples and demos of web development projects
 
-[NOTE] that the relevant company business-related information (terminology, identifiers, comments) is blacked-out in the code
+[NOTE]
+====
+The projects below are listed in reverse chronological order
+====
+
+
+
+== Internal company analytics website
+
+[IMPORTANT]
+====
+Company's business-related information (terminology, identifiers, comments) is blacked-out in the code
 and on the snapshot picture
+====
 
 The website is shown on picture 
-https://github.com/pasha-bolokhov-cs/sample-work/blob/master/analytics/analytics-screenshot.png[Analytics Screenshot].
+https://raw.githubusercontent.com/pasha-bolokhov-cs/sample-work/master/analytics/analytics-screenshot.png[Analytics Screenshot].
 
 The relevant "de-classified" code is at
-https://github.com/pasha-bolokhov-cs/sample-work/tree/master/analytics
+https://github.com/pasha-bolokhov-cs/sample-work/tree/master/analytics[Analytics Code].
+
+
+== Albatross Online Store
+
+The code is hosted at https://github.com/pasha-bolokhov-cs/comp199[Albatross Project] webpage.
+The running LAMP version is available on this
+http://ec2-18-221-173-220.us-east-2.compute.amazonaws.com/~bolokhov/albatross[Amazon EC2] instance.
+
+== Sushi Palace
 
 
