--- a/README.adoc
+++ b/README.adoc
@@ -27,10 +27,10 @@ https://github.com/pasha-bolokhov-cs/sample-work/tree/master/analytics[Analytics
 
 == Albatross Online Store
 
+image::https://raw.githubusercontent.com/pasha-bolokhov-cs/sample-work/master/albatross/albatross-screenshot.png[link=http://ec2-18-221-173-220.us-east-2.compute.amazonaws.com/~bolokhov/albatross]
+
 The code is hosted at https://github.com/pasha-bolokhov-cs/comp199[Albatross Project] webpage.
 The running LAMP version is available on this
 http://ec2-18-221-173-220.us-east-2.compute.amazonaws.com/~bolokhov/albatross[Amazon EC2] instance.
 
 == Sushi Palace
-
-
