--- a/README.adoc
+++ b/README.adoc
@@ -40,3 +40,6 @@ This project is hosted at https://github.com/pasha-bolokhov-cs/comp140/tree/mast
 
 The running LAMP page is available on this
 http://ec2-18-221-173-220.us-east-2.compute.amazonaws.com/~bolokhov/sushi-palace[Amazon EC2] instance.
+
+[NOTE]
+This is a rather early and simple project
