--- a/README.adoc
+++ b/README.adoc
@@ -26,11 +26,11 @@ https://github.com/pasha-bolokhov-cs/sample-work/tree/master/analytics[Analytics
 
 == &#x1f30e; Albatross Online Store
 
-image::https://raw.githubusercontent.com/pasha-bolokhov-cs/sample-work/master/albatross/albatross-screenshot.png[link=http://ec2-18-221-173-220.us-east-2.compute.amazonaws.com/~bolokhov/albatross]
+image::https://raw.githubusercontent.com/pasha-bolokhov-cs/sample-work/master/albatross/albatross-screenshot.png[link=https://albatross-travel-app.herokuapp.com]
 
-The code is hosted at https://github.com/pasha-bolokhov-cs/comp199[Albatross Project] webpage.
-The running LAMP version is available on this
-http://ec2-18-221-173-220.us-east-2.compute.amazonaws.com/~bolokhov/albatross[Amazon EC2] instance.
+The code is hosted at https://gitlab.com/pasha-bolokhov/albatross-travel[Albatross Project] webpage.
+The running LEMP version is available in this
+https://albatross-travel-app.herokuapp.com[Heroku] container.
 
 == &#x1f30e; Sushi Palace
 image::https://raw.githubusercontent.com/pasha-bolokhov-cs/sample-work/master/sushi-palace/sushi-palace-screenshot.png[link=http://165.231.196.104.bc.googleusercontent.com/~bolokhov/sushi-palace]
