Fixes with the links

--- a/README.adoc
+++ b/README.adoc
@@ -33,7 +33,7 @@ The running LEMP version is available on this
 https://albatross-travel-app.herokuapp.com[Heroku] instance.
 
 == &#x1f30e; Sushi Palace
-image::https://raw.githubusercontent.com/pasha-bolokhov-cs/sample-work/master/sushi-palace/sushi-palace-screenshot.png[link=http://165.231.196.104.bc.googleusercontent.com/~bolokhov/sushi-palace]
+image::https://raw.githubusercontent.com/pasha-bolokhov-cs/sample-work/master/sushi-palace/sushi-palace-screenshot.png[link=https://sushi-palace.herokuapp.com]
 
 This project is hosted at https://gitlab.com/pasha-bolokhov/sushi-palace[Sushi Palace] page.
 
