Add 'Slope-It' app

--- a/README.adoc
+++ b/README.adoc
@@ -9,6 +9,12 @@ The projects below are listed in reverse chronological order
 ====
 
 
+== &#x1f30e; Slope-It Google Sheets Add-on
+
+image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/slope-it/slope-it-screenshot.png[link=https://pasha-bolokhov.gitlab.io/slope-it-home]
+
+An add-on for statistical calculations in Google Sheets
+
 
 == &#x1f30e; Internal proprietary analytics website
 
@@ -18,7 +24,7 @@ A web-based company's business-related information (terminology, identifiers, co
 ====
 
 The website is shown on picture 
-https://raw.githubusercontent.com/pasha-bolokhov-cs/sample-work/master/analytics/analytics-screenshot.png[Request Analytics Screenshot].
+https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/analytics/analytics-screenshot.png[Request Analytics Screenshot].
 
 The relevant "de-classified" code is at
 https://github.com/pasha-bolokhov-cs/sample-work/tree/master/analytics[Request Analytics Code].
@@ -26,14 +32,14 @@ https://github.com/pasha-bolokhov-cs/sample-work/tree/master/analytics[Request A
 
 == &#x1f30e; Albatross Online Store
 
-image::https://raw.githubusercontent.com/pasha-bolokhov-cs/sample-work/master/albatross/albatross-screenshot.png[link=https://albatross-travel-app.herokuapp.com]
+image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/albatross/albatross-screenshot.png[link=https://albatross-travel-app.herokuapp.com]
 
 The code is hosted at https://gitlab.com/pasha-bolokhov/albatross-travel[Albatross Project] webpage.
 The running LEMP version is available on this
 https://albatross-travel-app.herokuapp.com[Heroku] instance.
 
 == &#x1f30e; Sushi Palace
-image::https://raw.githubusercontent.com/pasha-bolokhov-cs/sample-work/master/sushi-palace/sushi-palace-screenshot.png[link=https://sushi-palace.herokuapp.com]
+image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/sushi-palace/sushi-palace-screenshot.png[link=https://sushi-palace.herokuapp.com]
 
 This project is hosted at https://gitlab.com/pasha-bolokhov/sushi-palace[Sushi Palace] page.
 
