--- a/README.adoc
+++ b/README.adoc
@@ -9,7 +9,8 @@ The projects below are listed in reverse chronological order
 ====
 
 
-[%hardbreaks]
+{empty} +
+{empty} +
 == &#x1f30e; Slope-It Google Sheets Add-on
 
 image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/slope-it/slope-it-screenshot.png[link=https://pasha-bolokhov.gitlab.io/slope-it-home]
@@ -19,7 +20,8 @@ An add-on for statistical calculations in Google Sheets
 Install it via its https://gsuite.google.com/marketplace/app/slopeit/1088613043056[G Suite Marketplace listing]
 
 
-[%hardbreaks]
+{empty} +
+{empty} +
 == &#x1f30e; Internal proprietary analytics website
 
 [IMPORTANT]
@@ -34,7 +36,8 @@ The relevant "de-classified" code is at
 https://github.com/pasha-bolokhov-cs/sample-work/tree/master/analytics[Request Analytics Code].
 
 
-[%hardbreaks]
+{empty} +
+{empty} +
 == &#x1f30e; Albatross Online Store
 
 image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/albatross/albatross-screenshot.png[link=https://albatross-travel-app.herokuapp.com]
@@ -44,7 +47,8 @@ The running LEMP version is available on this
 https://albatross-travel-app.herokuapp.com[Heroku] instance.
 
 
-[%hardbreaks]
+{empty} +
+{empty} +
 == &#x1f30e; Sushi Palace
 image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/sushi-palace/sushi-palace-screenshot.png[link=https://sushi-palace.herokuapp.com]
 
