--- a/README.adoc
+++ b/README.adoc
@@ -31,7 +31,7 @@ Install it via its https://gsuite.google.com/marketplace/app/slopeit/10886130430
 A web-based company's business-related information (terminology, identifiers, comments) is blacked-out in the code
 ====
 
-image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/analytics/analytics-banner.png[link=https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/analytics/analytics-screenshot.png]
+image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/analytics/analytics-banner.png[link=https://github.com/pasha-bolokhov-cs/sample-work/tree/master/analytics]
 
 The website is shown on picture
 https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/analytics/analytics-screenshot.png[Request Analytics Screenshot].
