List the projects in chronological order

--- a/README.adoc
+++ b/README.adoc
@@ -5,20 +5,26 @@ Samples and demos of web development projects
 
 [NOTE]
 ====
-The projects below are listed in reverse chronological order
+The projects below are listed in chronological order
 ====
 
 
 {empty} +
 {empty} +
 
-== &#x1f30e; Slope-It Google Sheets Add-on
+== &#x1f30e; Albatross Online Store — Feature Project
 
-image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/slope-it/slope-it-screenshot.png[link=https://slope-it-tool.web.app]
+image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/albatross/albatross-screenshot.png[link=https://albatross-travel-app.herokuapp.com]
 
-An add-on for statistical calculations in Google Sheets
+The code is hosted at https://gitlab.com/pasha-bolokhov/albatross-travel[Albatross Project] webpage.
+The running LEMP version is available on this
+https://albatross-travel-app.herokuapp.com[Heroku] instance.
+[NOTE]
+This is originally a _class_ project featuring multiple frameworks and services — AngularJS, Bootstrap, JWT, MySQL, PayPal (sandbox) _etc_
 
-Install it via its https://gsuite.google.com/marketplace/app/slopeit/1088613043056[G Suite Marketplace] listing
+Feel free to browse this project, use a mock email address to sign up and log in. Please note that mobile UX was not a requirement for this project at the time (2015)
+
+The project is being migrated to the modern Angular. It will feature the approaches that come with Angular — Material Design, Routing, Lazy Loading, Differential Loading. It will use Google Firebase — Auth, Firestore, Storage, Hosting, Functions. A very raw progress can be previewed https://albatross-travel-agency.web.app[here]
 
 
 {empty} +
@@ -43,16 +49,10 @@ https://github.com/pasha-bolokhov-cs/sample-work/tree/master/analytics[Request A
 {empty} +
 {empty} +
 
-== &#x1f30e; Albatross Online Store — Feature Project
+== &#x1f30e; Slope-It Google Sheets Add-on
 
-image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/albatross/albatross-screenshot.png[link=https://albatross-travel-app.herokuapp.com]
+image::https://raw.githubusercontent.com/pasha-bolokhov/sample-work/master/slope-it/slope-it-screenshot.png[link=https://slope-it-tool.web.app]
 
-The code is hosted at https://gitlab.com/pasha-bolokhov/albatross-travel[Albatross Project] webpage.
-The running LEMP version is available on this
-https://albatross-travel-app.herokuapp.com[Heroku] instance.
-[NOTE]
-This is originally a _class_ project featuring multiple frameworks and services — AngularJS, Bootstrap, JWT, MySQL, PayPal (sandbox) _etc_
+An add-on for statistical calculations in Google Sheets
 
-Feel free to browse this project, use a mock email address to sign up and log in. Please note that mobile UX was not a requirement for this project at the time (2015)
-
-The project is being migrated to the modern Angular. It will feature the approaches that come with Angular — Material Design, Routing, Lazy Loading, Differential Loading. It will use Google Firebase — Auth, Firestore, Storage, Hosting, Functions. A very raw progress can be previewed https://albatross-travel-agency.web.app[here]
+Install it via its https://gsuite.google.com/marketplace/app/slopeit/1088613043056[G Suite Marketplace] listing
